配置无状态容器

--- a/docker-compose/http-server/docker-compose.yml
+++ b/docker-compose/http-server/docker-compose.yml
@@ -5,28 +5,32 @@ nginx:
         - redis
         - phpfpm
     ports:
-        - "81:80"
+        - "80:80"
         - "443:443"
     volumes:
         - /var/www:/usr/share/nginx/html
         - ./nginx.conf:/etc/nginx/nginx.conf
-        - ./conf.d:/etc/nginx/conf.d
+        - ./nginx.d:/etc/nginx/conf.d
 
 mysql:
     image: index.alauda.cn/library/mysql
     environment:
         MYSQL_ROOT_PASSWORD: qazasdedc123
     ports:
-        - "3307:3306"
+        - "3306:3306"
+    volumes:
+        - ./mysql.cnf:/etc/mysql/my.cnf
+        - ./mysql.d:/etc/mysql/conf.d
+        - /var/mysql:/var/lib/mysql
 
 redis:
     image: index.alauda.cn/library/redis
     ports:
-        - "6380:6379"
+        - "6379:6379"
 
 phpfpm:
     image: php-fpm:v5.6
     volumes:
         - /var/www:/var/www/html
     ports:
-        - "9001:9000"
+        - "9000:9000"
