添加 phpfpm 连接 mysql 的 links

--- a/docker-compose/http-server/docker-compose.yml
+++ b/docker-compose/http-server/docker-compose.yml
@@ -30,6 +30,8 @@ redis:
 
 phpfpm:
     image: php-fpm:v5.6
+    links:
+        - mysql
     volumes:
         - /var/www:/var/www/html
     ports:
